# RustyChess

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: hello_world.rs
src/game/: board.rs  piece.rs
src/models/: api_entities.rs  errors.rs  mod.rs  request.rs  response.rs  router.rs
src/routers/: hello_world.rs  mod.rs
