[package]
name = "rusty-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
maplit = "1.0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
